fix alignment on index

--- a/res/index.css
+++ b/res/index.css
@@ -1,5 +1,6 @@
 body {
-  
+  display: block;
+  text-align: center;
 }
 container {
   display: flex;
